# advent-of-code-2021

./: Cargo.toml  README.md
day01/: Cargo.toml  README.md
day01/benches/: challenges.rs
day01/src/first/: mod.rs  test.rs
day01/src/second/: mod.rs  test.rs
day02/: Cargo.toml  README.md
day02/benches/: challenges.rs
day02/src/: lib.rs
day02/src/first/: mod.rs  test.rs
day02/src/second/: mod.rs  test.rs
day03/: Cargo.toml  README.md
day03/benches/: challenges.rs
day03/data/: challenge.txt
day03/src/: collect_transpose.rs  lib.rs  pivot_iter.rs
day03/src/first/: mod.rs  test.rs
day03/src/second/: mod.rs  test.rs
day04/: Cargo.toml  README.md
day04/benches/: challenges.rs
day04/src/first/: mod.rs  test.rs
day04/src/second/: mod.rs  test.rs
day05/: Cargo.toml  README.md
day05/benches/: challenges.rs
day05/src/: lib.rs  pattern.regex  vector.rs
day05/src/first/: mod.rs  test.rs
day05/src/second/: mod.rs  test.rs
day06/: Cargo.toml  README.md
day06/benches/: challenges.rs
day06/src/: group_by.rs  lib.rs
day06/src/first/: mod.rs  test.rs
day06/src/second/: mod.rs  test.rs
day07/: Cargo.toml  README.md
day07/benches/: challenges.rs
day07/src/: lib.rs
day07/src/first/: mod.rs  test.rs
day07/src/second/: mod.rs  test.rs
day08/: Cargo.toml  README.md
day08/benches/: challenges.rs
day08/src/first/: mod.rs  test.rs
day08/src/second/: mod.rs  test.rs
