[package]
name = "day06"
version = "0.1.0"
authors = ["iferc <github@iferc.ca>"]
edition = "2021"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
eyre = "0.6.5"
itertools = "0.10.1"

[dev-dependencies]
criterion = "0.3"

[[bench]]
name = "challenges"
harness = false
