[package]
name = "day07"
version = "0.1.0"
authors = ["iferc <github@iferc.ca>"]
edition = "2021"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
eyre = "0.6.5"

[dev-dependencies]
criterion = "0.3"

[[bench]]
name = "challenges"
harness = false

# force this library to not be a part of the parent workspace
# this is required because this library is using a nightly feature
# and I don't want the whole repo to use nightly
[workspace]
